tests/ui/fail-noname.stderr
error: expect `#[lazylink(name = "..", ..)]` or `#[link(name = "..")]`
 --> $DIR/fail-noname.rs:3:5
  |
3 | /     extern "C" {
4 | |         fn puts(v: *const i8);
5 | |     }
  | |_____^
